# whichLLM

./: .env.example  .gitignore  docker-compose.yml  plan.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/providers/: openai.py
